--- a/.github/workflows/collect-download-count.yml
+++ b/.github/workflows/collect-download-count.yml
@@ -26,6 +26,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           if [ -n "$(git status --porcelain statistics/downloads)" ]; then
+  
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+
             git add statistics/downloads
             git commit -m "Update download count data."
             git push
