--- a/.github/workflows/collect-download-count.yml
+++ b/.github/workflows/collect-download-count.yml
@@ -28,12 +28,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          if [ -n "$(git status --porcelain statistics/downloads)" ]; then
+          output_dir="statistics/downloads"
+          if [ -n "$(git status --porcelain $output_dir)" ]; then
   
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
 
-            git add statistics/downloads
+            git add $output_dir
             git commit -m "Update download count data."
             git push
           else
