--- a/.github/workflows/collect-download-count.yml
+++ b/.github/workflows/collect-download-count.yml
@@ -10,6 +10,10 @@ on:
 permissions:
   contents: write
 
+env:
+  TARGET_REPO_FILE_PATH: .github/scripts/target-repos.json
+  OUTPUT_DIR_PATH: statistics/downloads
+
 jobs:
   collect-download-count:
     runs-on: ubuntu-latest
@@ -22,19 +26,14 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          .github/scripts/collectdownloadcount.ps1 -TargetRepoFilePath '.github/scripts/target-repos.json' -OutputFolderPath 'statistics/downloads'
+          .github/scripts/collectdownloadcount.ps1 -TargetRepoFilePath $env:TARGET_REPO_FILE_PATH -OutputFolderPath $env:OUTPUT_DIR_PATH
 
       - name: Commit and Push collected data
-        #env:
-        #  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          output_dir="statistics/downloads"
-          if [ -n "$(git status --porcelain $output_dir)" ]; then
-  
+          if [ -n "$(git status --porcelain $OUTPUT_DIR_PATH)" ]; then
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
-
-            git add $output_dir
+            git add $OUTPUT_DIR_PATH
             git commit -m "Update download count data."
             git push
           else
